# ELEC4848

./: .gitignore  example_questions.txt  pyproject.toml  start.bat  start.ps1  start.sh
backend/: api.py  eval.py  eval_dataset.json  main.py
backend/data/: Dataset.xlsx  attractions.csv  restaurants.csv
backend/src/: chat_history.py  config.py  embedding.py  ingestion.py  performance_measure.py  place_lookup.py  prompt_template.txt  proximity.py  rag.py
backend/tools/: place_name_dataset_converter.py  review_processor_ui.py
backend/tools/src/: config.py  place_names_input.csv  place_names_output.csv  review_processor.py  review_processor_prompt.txt
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Chat.tsx
frontend/src/components/ui/: avatar.tsx  button.tsx  scroll-area.tsx
