[project]
name = "elec4848"
version = "0.1.0"
description = ""
authors = [
    {name = "Donno"}
]
readme = "README.md"
requires-python = ">=3.12, <3.15"
dependencies = [
    "ollama (>=0.6.1,<0.7.0)",
    "langchain (>=1.2.0,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "chromadb (>=1.4.0,<2.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "langchain-ollama (>=1.0.1,<2.0.0)",
    "langchain-chroma (>=1.1.0,<2.0.0)",
    "psutil (>=7.2.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
